[package]
name = "life2pi"
version = "0.1.1"
edition = "2021"
authors = ["3nt3 <nia@3nt3.de>"]
readme = "README.md"
repository = "https://github.com/3nt3/life360-rs"
homepage = "https://github.com/3nt3/life360-rs"
license = "AGPL-3.0"
categories = ["api-bindings"]
description = "A Rust library for the undocumented Life360 API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
